--- a/src/assets/sass/variables/_colors.scss
+++ b/src/assets/sass/variables/_colors.scss
@@ -3,6 +3,7 @@ $blue: #66E0FB;
 $dark-bg: #1B1B1B;
 $dark-text: rgba(255,255,255,.6);
 $light-text: rgba(255,255,255,.8);
+$light-dark: #0F0F0F;
 $separator: #2C2C2C;
 $title: #858585;
 $voice-bg: #D2D2D2;
