Styles fix, added voices to list, search function

--- a/src/assets/sass/variables/_colors.scss
+++ b/src/assets/sass/variables/_colors.scss
@@ -1,5 +1,5 @@
 $black: #000000;
-$blue: #66E0FB;
+$blue-text: #00D9FF;
 $dark-bg: #1B1B1B;
 $dark-text: rgba(255,255,255,.6);
 $light-text: rgba(255,255,255,.8);
