Added animation styles

--- a/src/assets/sass/variables/_mixins.scss
+++ b/src/assets/sass/variables/_mixins.scss
@@ -3,5 +3,44 @@
     219deg,
     rgba(0, 227, 255, 1) 0%,
     rgba(0, 187, 255, 1) 100% 
-);
+  );
+}
+
+@keyframes bounce {
+  15% {
+    transform: translateY(-50%);
+  }
+  30% {
+    transform: translateY(0);
+  }
+  45% {
+    transform: translateY(-30%);
+  }
+  60% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(-15%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+  
+}
+@keyframes select {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.5);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.25);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
